6.5.1
[add] get_live to youtube_requests module to retrieve live stream info for a channel
[fix] live stream playback

6.5.0
[add] Video quality selection to Settings - MPEG-DASH
[add] Limit to 30fps to Settings - MPEG-DASH
[add] Uploads playlist to channel playlists
[chg] Use search for channel videos instead of the Uploads playlist
[fix] Signature cipher, some videos unplayable (ie. music videos)
[fix] Playback monitoring using Python 3
[fix] unescape html entities in title and plot
[fix] handling of invalid grant when refreshing access token
[fix] adding suggested videos when played from some widgets
[fix] http server /client_ip using Python 3 |contrib: t6|
[upd] refactor youtube_resolver.resolve
[lang] el_gr strings |contrib: twilight0|
[lang] es_es strings |contrib: roliverosc|
[lang] ko_kr strings |contrib: parkmino|

6.4.1
[upd] Use the activation url provided by the authentication request
[add] add Settings - MPEG-DASH - Default to WEBM adaptation set
        - required for 4k stream automatic selection
[add] add Settings - MPEG-DASH - Include VP9.2
        - includes HDR content in the manifest
[add] add support for &hide_folders=true parameter in search query urls
        - when added to the url it will hide the Playlists, Channels, and Live folders
[add] &seek=<time_in_seconds> to play urls
[fix] fix playback of Purchases
[fix] fixed saved playlists that don't belong to a channel
[fix] mpeg-dash frame rate representation
[fix] datetime parsing if no datetime string is available
[chg] handle playback monitoring in threads
[lang] nl_nl strings |contrib: MB1968|
[lang] el_gr strings |contrib: twilight0|

6.4.0
[add] 4K videos with InputStream Adaptive >= v2.3.14
        - Thanks to @peak3d
[fix] some videos not playing when logged in
[fix] reset function cache at restart/update to resolve issues persisting due to cached results
[fix] service potentially not shutting down http server
[fix] added to playlist/subscriptions notifications