@@ -16,6 +16,7 @@
 6.5.1
 [add] get_live to youtube_requests module to retrieve live stream info for a channel
 [fix] live stream playback
+[fix] sqlite requests breaking when another add-on/module uses sqlite3.register_converter(..)
         </news>
         <assets>
             <icon>icon.png</icon>
